# pi-mobile-photobackup

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
PRD/: aethereal_mobile_backup_critique_resolution_v0.1.md  aethereal_mobile_backup_implementation_plan_v0.1.md  aethereal_mobile_backup_implementation_plan_v0.2.md  aethereal_mobile_backup_implementation_plan_v0.3.md  aethereal_mobile_backup_prd_v0.2.md  aethereal_mobile_backup_prd_v0.2_critique.md  aethereal_mobile_backup_prd_v0.3.md  aethereal_mobile_backup_verification_plan_v0.1.md  aethereal_mobile_backup_verification_plan_v0.2.md  aethereal_mobile_backup_verification_plan_v0.3.md
config/: default.yaml
docs/: DEPLOYMENT.md
scripts/: dev_server.py  run_appliance.py
src/aethereal/: appliance.py
src/aethereal/backup/: capacity.py  classification.py  copier.py  engine.py  identity.py  manifest_journal.py  object_store.py  planner.py  preflight.py  recovery.py  runner.py  snapshot.py  state_machine.py
src/aethereal/common/: config.py  events.py  platform.py  source.py  version.py
src/aethereal/led/: gpio.py  (+2 more)
systemd/: aethereal-appliance.service
tests/fault/: test_source_mount.py
tests/integration/: test_appliance.py  test_copier.py  test_db_schema.py  test_engine.py  test_manifest_repo.py  test_pipeline.py  test_preflight.py  test_recovery.py  test_web.py
tests/unit/: test_capacity.py  test_classification.py  test_config.py  test_events.py  test_identity.py  test_led.py  test_linux_devices.py  test_linux_mountinfo.py  test_media.py  test_planner.py  test_runner.py  test_snapshot.py  test_state_machine.py  test_watch.py
(+15 files in other folders)
