[project]
name = "aethereal-backup"
version = "0.0.1"
description = "Aethereal Mobile Backup Appliance — field backup engine for photography and drone media"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Proprietary" }

# Portable runtime dependencies (install on macOS dev host and on the Pi).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "argon2-cffi>=23.1",   # web password hashing
    "psutil>=5.9",         # host telemetry (works on macOS and Linux)
]

[project.optional-dependencies]
# Linux OS integration that also works inside a Linux dev container (udev).
# Skipped automatically on macOS via environment markers.
linux = [
    "pyudev>=0.24 ; sys_platform == 'linux'",
]
# Raspberry Pi hardware only (GPIO). Not installable/usable in a container.
pi = [
    "gpiozero>=2.0 ; sys_platform == 'linux'",
    "lgpio>=0.2 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",         # FastAPI test client
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aethereal"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
